{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 182,
  "lineage": "b2820269-6fd3-fe1c-a24e-e9faf8475855",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:517066985764:security-group/sg-050d69708e8de8313",
            "description": "Cluster security group",
            "egress": [],
            "id": "sg-050d69708e8de8313",
            "ingress": [],
            "name": "payload-eks-sg",
            "name_prefix": "",
            "owner_id": "517066985764",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Owner": "raj",
              "Project": "payload-demo"
            },
            "tags_all": {
              "Owner": "raj",
              "Project": "payload-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c80d3250618cfe1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "517066985764",
            "id": "sg-050d69708e8de8313",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds_postgres",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:517066985764:security-group/sg-0a9ec58781e5cb0b9",
            "description": "Allow DB access from EKS nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a9ec58781e5cb0b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "payload-rds-sg",
            "name_prefix": "",
            "owner_id": "517066985764",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "payload-rds-sg",
              "Owner": "raj",
              "Project": "payload-demo"
            },
            "tags_all": {
              "Name": "payload-rds-sg",
              "Owner": "raj",
              "Project": "payload-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c80d3250618cfe1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "517066985764",
            "id": "sg-0a9ec58781e5cb0b9",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0287656ccf7b76d9e",
            "arn": "arn:aws:ec2:ap-south-1:517066985764:elastic-ip/eipalloc-0287656ccf7b76d9e",
            "association_id": "eipassoc-095f37b1994e3712d",
            "domain": "vpc",
            "id": "eipalloc-0287656ccf7b76d9e",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0e6d79912d746e20f",
            "private_dns": "ip-10-0-10-241.ap-south-1.compute.internal",
            "private_ip": "10.0.10.241",
            "public_dns": "ec2-13-201-202-233.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.202.233",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-081217ae793a44433",
            "arn": "arn:aws:ec2:ap-south-1:517066985764:elastic-ip/eipalloc-081217ae793a44433",
            "association_id": "eipassoc-0ba5a8d7b21b9d326",
            "domain": "vpc",
            "id": "eipalloc-081217ae793a44433",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0bae0ffdfa1bfb629",
            "private_dns": "ip-10-0-20-123.ap-south-1.compute.internal",
            "private_ip": "10.0.20.123",
            "public_dns": "ec2-13-204-211-199.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.204.211.199",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:517066985764:internet-gateway/igw-00ad004325059c236",
            "id": "igw-00ad004325059c236",
            "owner_id": "517066985764",
            "region": "ap-south-1",
            "tags": {
              "Name": "payload-demo-igw",
              "Owner": "raj",
              "Project": "payload-demo"
            },
            "tags_all": {
              "Name": "payload-demo-igw",
              "Owner": "raj",
              "Project": "payload-demo"
            },
            "vpc_id": "vpc-06c80d3250618cfe1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0287656ccf7b76d9e",
            "association_id": "eipassoc-095f37b1994e3712d",
            "connectivity_type": "public",
            "id": "nat-079e1dbd1249cbe94",
            "network_interface_id": "eni-0e6d79912d746e20f",
            "private_ip": "10.0.10.241",
            "public_ip": "13.201.202.233",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07326d40eb05de6b8",
            "tags": {
              "Name": "payload-demo-nat-0",
              "Owner": "raj",
              "Project": "payload-demo"
            },
            "tags_all": {
              "Name": "payload-demo-nat-0",
              "Owner": "raj",
              "Project": "payload-demo"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-081217ae793a44433",
            "association_id": "eipassoc-0ba5a8d7b21b9d326",
            "connectivity_type": "public",
            "id": "nat-0f286781328e4418c",
            "network_interface_id": "eni-0bae0ffdfa1bfb629",
            "private_ip": "10.0.20.123",
            "public_ip": "13.204.211.199",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c3bc56b060e85223",
            "tags": {
              "Name": "payload-demo-nat-1",
              "Owner": "raj",
              "Project": "payload-demo"
            },
            "tags_all": {
              "Name": "payload-demo-nat-1",
              "Owner": "raj",
              "Project": "payload-demo"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0799f9b29265c4ba31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-079e1dbd1249cbe94",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-0799f9b29265c4ba3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "517066985764",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-0799f9b29265c4ba3"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.natgw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:517066985764:route-table/rtb-0799f9b29265c4ba3",
            "id": "rtb-0799f9b29265c4ba3",
            "owner_id": "517066985764",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-079e1dbd1249cbe94",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "payload-demo-private-rt",
              "Owner": "raj",
              "Project": "payload-demo"
            },
            "tags_all": {
              "Name": "payload-demo-private-rt",
              "Owner": "raj",
              "Project": "payload-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c80d3250618cfe1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "517066985764",
            "id": "rtb-0799f9b29265c4ba3",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:517066985764:route-table/rtb-032b874a7a0bf9285",
            "id": "rtb-032b874a7a0bf9285",
            "owner_id": "517066985764",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00ad004325059c236",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "payload-demo-public-rt",
              "Owner": "raj",
              "Project": "payload-demo"
            },
            "tags_all": {
              "Name": "payload-demo-public-rt",
              "Owner": "raj",
              "Project": "payload-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c80d3250618cfe1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "517066985764",
            "id": "rtb-032b874a7a0bf9285",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd693738c3d8ff83",
            "region": "ap-south-1",
            "route_table_id": "rtb-0799f9b29265c4ba3",
            "subnet_id": "subnet-04b805dc7f3179534"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0587a75f689b0a016",
            "region": "ap-south-1",
            "route_table_id": "rtb-0799f9b29265c4ba3",
            "subnet_id": "subnet-0271ad1d714f1658f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6ebc407836ef5a7",
            "region": "ap-south-1",
            "route_table_id": "rtb-032b874a7a0bf9285",
            "subnet_id": "subnet-07326d40eb05de6b8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e14254fe60c53c4c",
            "region": "ap-south-1",
            "route_table_id": "rtb-032b874a7a0bf9285",
            "subnet_id": "subnet-0c3bc56b060e85223"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:517066985764:subnet/subnet-04b805dc7f3179534",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b805dc7f3179534",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "517066985764",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "payload-demo-private-0",
              "Owner": "raj",
              "Project": "payload-demo",
              "kubernetes.io/cluster/payload-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "payload-demo-private-0",
              "Owner": "raj",
              "Project": "payload-demo",
              "kubernetes.io/cluster/payload-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06c80d3250618cfe1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "517066985764",
            "id": "subnet-04b805dc7f3179534",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:517066985764:subnet/subnet-0271ad1d714f1658f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0271ad1d714f1658f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "517066985764",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "payload-demo-private-1",
              "Owner": "raj",
              "Project": "payload-demo",
              "kubernetes.io/cluster/payload-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "payload-demo-private-1",
              "Owner": "raj",
              "Project": "payload-demo",
              "kubernetes.io/cluster/payload-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06c80d3250618cfe1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "517066985764",
            "id": "subnet-0271ad1d714f1658f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:517066985764:subnet/subnet-07326d40eb05de6b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07326d40eb05de6b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "517066985764",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "payload-demo-public-0",
              "Owner": "raj",
              "Project": "payload-demo",
              "kubernetes.io/cluster/payload-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "payload-demo-public-0",
              "Owner": "raj",
              "Project": "payload-demo",
              "kubernetes.io/cluster/payload-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06c80d3250618cfe1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "517066985764",
            "id": "subnet-07326d40eb05de6b8",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:517066985764:subnet/subnet-0c3bc56b060e85223",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3bc56b060e85223",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "517066985764",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "payload-demo-public-1",
              "Owner": "raj",
              "Project": "payload-demo",
              "kubernetes.io/cluster/payload-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "payload-demo-public-1",
              "Owner": "raj",
              "Project": "payload-demo",
              "kubernetes.io/cluster/payload-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06c80d3250618cfe1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "517066985764",
            "id": "subnet-0c3bc56b060e85223",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:517066985764:vpc/vpc-06c80d3250618cfe1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e77a73c451635466",
            "default_route_table_id": "rtb-0dfa4e2d00b25d23c",
            "default_security_group_id": "sg-01a0690a5caf9591a",
            "dhcp_options_id": "dopt-0a8a4b6d3c2458f22",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06c80d3250618cfe1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dfa4e2d00b25d23c",
            "owner_id": "517066985764",
            "region": "ap-south-1",
            "tags": {
              "Name": "payload-demo-vpc",
              "Owner": "raj",
              "Project": "payload-demo"
            },
            "tags_all": {
              "Name": "payload-demo-vpc",
              "Owner": "raj",
              "Project": "payload-demo"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}